arreglos base de datos y vista results

--- a/ai_module/templates/ai_module/testcases.html
+++ b/ai_module/templates/ai_module/testcases.html
@@ -31,8 +31,8 @@
             <input type="file" name="archivo" id="archivo" style="display: none;" onchange="updateFileName()">
             <button type="button" class="btn btn-primary mb-2" onclick="document.getElementById('archivo').click();">Adjuntar Archivo</button>
             
-            <textarea name="mensaje" class="form-control mt-3" rows="1" placeholder="Escribe un mensaje..."></textarea>
-            
+            <textarea name="mensaje" class="form-control mt-3" rows="1" placeholder="Escribe un URL..."></textarea>
+            <textarea name="cantidad" class="form-control mt-3" rows="1" placeholder="Número de casos de prueba"></textarea>
             <button type="submit" class="btn btn-success mt-3">Generar Casos de Prueba</button>
         </form>
 
